--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -1,15 +1,14 @@
 .playerContainer {
-    padding: 3rem 4rem ;
+    padding: 3rem 4rem;
     width: 26.5rem;
     height: 100vh;
-    
-    
+
     background: var(--purple-500);
     color: var(--white);
 
     display: flex;
     flex-direction: column;
-    align-items:  center;
+    align-items: center;
     justify-content: space-between;
 
     header {
@@ -18,7 +17,7 @@
         gap: 1rem;
     }
 
-    strong{
+    strong {
         font-family: Lexend, sans-serif;
         font-weight: 600;
     }
@@ -26,11 +25,30 @@
     footer {
         align-self: stretch;
 
-        &.empty{
+        &.empty {
             opacity: 0.5;
         }
     }
+}
 
+.currentEpisode {
+    text-align: center;
+    img {
+        border-radius: 1.5rem;
+    }
+
+    strong {
+        display: block;
+        margin-top: 2rem;
+        font: 600 1.25rem Lexend, sans-serif;
+        line-height: 1.75rem;
+    }
+    span {
+        display: block;
+        margin-top: 1rem;
+        opacity: 0.6;
+        line-height: 1.5rem;
+    }
 }
 
 .emptyPlayer {
@@ -38,9 +56,9 @@
     height: 20rem;
     border: 1.5px dashed var(--purple-500);
     border-radius: 1.5rem;
-    background: linear-gradient(143.8deg, rgba(145,100,250, 0.8) 0%, rgba(0,0,0,0) 100%);
+    background: linear-gradient(143.8deg, rgba(145, 100, 250, 0.8) 0%, rgba(0, 0, 0, 0) 100%);
 
-    padding:  4rem;
+    padding: 4rem;
     text-align: center;
 
     display: flex;
@@ -51,7 +69,7 @@
 .progress {
     display: flex;
     align-items: center;
-    gap: .5rem;
+    gap: 0.5rem;
     font-size: 0.875;
 
     span {
@@ -61,12 +79,11 @@
     }
 
     .slider {
-        flex: 1;        
+        flex: 1;
         .emptySlider {
             width: 100%;
             height: 4px;
             background: var(--purple-300);
-            
         }
     }
 }
@@ -81,12 +98,23 @@
         background: transparent;
         border: 0;
         font-size: 0;
+        transition: filter 0.2s;
+        &:hover:not(:disabled){
+          filter: brightness(0.7);
+        }
 
-        &.playButton{
+        &:disabled{
+          cursor: default;
+        }
+
+        &.playButton {
             width: 4rem;
             height: 4rem;
             border-radius: 1rem;
             background: var(--purple-400);
+            &:hover:not(:disabled){
+              filter: brightness(0.95);
+            }
         }
     }
 }
