--- a/src/components/Player/styles.module.scss
+++ b/src/components/Player/styles.module.scss
@@ -25,7 +25,7 @@
     footer {
         align-self: stretch;
 
-        &.empty {
+        &.empty .disabled {
             opacity: 0.5;
         }
     }
@@ -70,7 +70,7 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    font-size: 0.875;
+    font-size: 0.875rem;
 
     span {
         display: inline-block;
@@ -99,13 +99,20 @@
         border: 0;
         font-size: 0;
         transition: filter 0.2s;
-        &:hover:not(:disabled){
-          filter: brightness(0.7);
-        }
 
         &:disabled{
           cursor: default;
         }
+        &:hover:not(:disabled){
+          filter: brightness(0.7);
+        }
+        &.isActive{
+          filter: invert(0.35) sepia(1) saturate(3) hue-rotate(100deg);
+        }
+        &.isActive:hover{
+          filter: invert(0.6) sepia(1) saturate(3) hue-rotate(100deg);
+        }
+
 
         &.playButton {
             width: 4rem;
